stabilize tests, fix some GCD problems